# BLAKE3-CUDA

./: .gdbinit.local  .gitignore  BLAKE3-CUDA.code-workspace  Cargo.toml  rust-toolchain.toml
BLAKE3-master/c/: blake3_portable.c
async-cuda/: .gitignore  Cargo.toml  README.md  build.rs
async-cuda/src/: device.rs  error.rs  lib.rs  stream.rs
async-cuda/src/ffi/: device.rs  error.rs  includes.rs  mod.rs  ptr.rs  stream.rs
async-cuda/src/ffi/memory/: device.rs  device2d.rs  host.rs  mod.rs
async-cuda/src/ffi/npp/: context.rs  includes.rs  (+5 more)
async-cuda/src/memory/: device.rs  device2d.rs  host.rs
async-cuda/src/npp/: constant_border.rs  copy_constant_border.rs  error.rs  mod.rs  region.rs  remap.rs  resize.rs  resize_batch.rs  stream.rs
async-cuda/src/runtime/: execution.rs  future.rs  mod.rs  thread_local.rs  work.rs
async-cuda/tests/: functions_side_effects_test.rs
b3sum/: Cargo.toml  foo.txt
b3sum/src/: main.rs
blake3_reference_impl_c/: main.c  test.py
c/: CMakeCache.txt  Makefile  blake3.c  cmake_install.cmake
c/blake3_c_rust_bindings/: Cargo.toml
cuda/: Cargo.toml  blake3.cu  blake3.ptx
cuda/crates/cudarc-main/examples/: 04-streams.rs  06-threading-copy.rs  hello_world.cu  hello_world.ptx
cuda/crates/cudarc-main/examples/07-build-workflow/: Cargo.toml
cuda/src/: BLAKE3-CUDA.code-workspace  main.rs
docs-txt/cuda/: CUBLAS_Library.txt  CUDA_Binary_Utilities.txt  CUDA_C_Best_Practices_Guide.txt  CUDA_C_Programming_Guide.txt  CUDA_Compiler_Driver_NVCC.txt  CUDA_Debugger_API.txt  CUDA_Driver_API.txt  CUDA_Math_API..txt  CUDA_Runtime_API.txt  CUDA_on_WSL_User_Guide.txt  CUFFT_Library.txt  CUSOLVER_Library.txt  CUSPARSE_Library.txt  GPUDirect_RDMA.txt  NVBLAS_Library.txt  NVRTC_User_Guide.txt  PTX_Compiler_API_User_Guide.txt  Pascal_Compatibility_Guide.txt  Pascal_Tuning_Guide.txt  Thrust_Quick_Start_Guide.txt  api-reference-guide.txt  cuDLA_API.txt  nvJitLink..txt  ptx_isa_8.3.txt
tools/compiler_version/: Cargo.toml
tools/compiler_version/src/: main.rs
(+4 files in other folders)
