[package]
name = "b3sum"
version = "1.5.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "a command line implementation of the BLAKE3 hash function"
repository = "https://github.com/BLAKE3-team/BLAKE3"
license = "CC0-1.0 OR Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
neon = ["blake3/neon"]
prefer_intrinsics = ["blake3/prefer_intrinsics"]
pure = ["blake3/pure"]

[dependencies]
anyhow = "1.0.80"
blake3 = { version = "1", path = "..", features = ["mmap", "rayon", "pure"] }
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
hex = "0.4.3"
rayon = "1.8.1"
wild = "2.2.1"

[dev-dependencies]
duct = "0.13.7"
tempfile = "3.10.0"
