[package]
name = "blake3-cuda"
version = "0.0.1"
authors = ["Sudya"]
description = "the BLAKE3 CUDA hash function"
repository = "https://github.com/sudyakov/BLAKE3-CUDA.git"
license = "CC0-1.0 OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
#async-cuda = { path = "../async-cuda", version = "0.5.4", features = ["ndarray", "npp"] }
cpp = "0.5"
ndarray = { version = "0.15", optional = true }
once_cell = "1.17"
tokio = { version = "1", features = ["full"] }
cudarc = { path = "crates/cudarc-main", version = "0.10" } 
rand = "0.8.5"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "test-util",
    "time",
] }
tokio-test = { version = "0.4" }
